--- a/style.css
+++ b/style.css
@@ -1,22 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Rubik:ital,wght@0,400;0,700;1,300&family=Titan+One&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap');
 
 *{
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
 
 html,body{
     margin: 0;
     padding: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
-    font-family: Work Sans, sans-serif;
+    font-family: Almarai, sans-serif;
 }
 
 header{
     background-color: rgb(255, 204, 0);
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     
@@ -28,7 +30,9 @@ header{
 }
 
 .play{
-    padding-left: 100px;
+    margin: 0px;
+    padding: 0px;
+    cursor: pointer;
 }
 
 .header-left{
@@ -40,6 +44,10 @@ header{
     justify-content: space-between;
 }
 
+.FM {
+    cursor: pointer;
+}
+
 .FM, .text-header{
     width: 50%;
     height: 50%;
@@ -49,13 +57,213 @@ header{
     display: flex;
     flex-direction: column;
     justify-content: end;
+    padding-bottom: 30px;
 }
 
 h1{
     margin-bottom: 0;
     padding-bottom: 0;
+    font-size: 35px;
+}
+
+.span1 {
+    font-size: smaller;
 }
 
 .span2{
-    font-size: larger;
+    font-size: 25px;
+}
+
+.section-1 {
+    width: 100%;
+    height: 100%;
+}
+
+.song {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    line-height: 16px;
+}
+
+section, footer {
+    flex-basis: 0;
+    margin: 0;
+}
+
+.section-1 {
+    width: 100%;
+    height: 237vh;
+    background-color: rgb(101, 13, 151);
+}
+
+.section-2 {
+    background-color: rgb(255, 204, 0);
+    width: 100%;
+    height: 300vh;
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+}
+
+.section-2 > div {
+    width: 100%;
+    border: 1px solid black;
+}
+
+footer {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+}
+
+.bocca {
+    width: 50%;
+    height: 100%;
+    background-color: rgb(101, 13, 151);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.freccia {
+    width: 50%;
+    height: 100%;
+    background-color: #fc3636;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.freccia-inizio:hover {
+    animation: rotazione-freccia 0.2s linear forwards;
+}
+
+.section-2-primo {
+    height: 80vh;
+}
+
+.h1-section-2 {
+    margin: 0px;
+    padding: 0px;
+    font-size: 275px;
+    font-weight: 800;
+    line-height: 250px;
+}
+
+.container1-section-2 {
+    display: flex;
+    justify-content: space-between;
+}
+
+.cerchio-section-2 {
+    width: 300px;
+    height: auto;
+}
+
+.cerchio {
+    margin: 8px;
+    margin-left: 76px;
+}
+
+.curva {
+    position: relative;
+    bottom: 230px;
+}
+
+.container2-section-2 {
+    display: flex;
+    justify-content: space-between;
+    height: 80vh;
+    width: 100%;
+}
+
+.lista-FM {
+    width: 32%;
+    position: relative;
+    bottom: 300px;
+}
+
+.lista-FM > div {
+    width: 100%;
+    height: auto;
+    border-bottom: 1px solid black;
+    margin-right: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.testa-lista-FM {
+    display: flex;
+    align-items: end !important;
+}
+
+.testa-lista-FM > p {
+    font-size: 70px;
+    margin: 0px;
+    padding: 0px;
+}
+
+.FM-span {
+    font-size: 120px;
+    margin-left: 20px;
+}
+
+.list-span {
+    font-size: 24px;
+}
+
+.container3-section-2 {
+    display: flex;
+    width: 100%;
+    height: auto;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.online-list {
+    width: 32%;
+    height: auto;
+    position: relative;
+    bottom: 300px;
+}
+
+.online-list > div {
+    width: 100%;
+    height: auto;
+    border-bottom: 1px solid black;
+    margin-left: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.testa-online-list p {
+    font-size: 70px;
+    margin: 0px;
+    padding: 0px;
+}
+
+.online-span {
+    font-size: 120px;
+    margin-left: 20px;
+}
+
+.list-span, .arrow {
+    cursor: pointer;
+}
+
+
+@keyframes rotazione-freccia {
+
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(-45deg);
+    }
+
 }
