--- a/style.css
+++ b/style.css
@@ -19,17 +19,18 @@ html,body{
 header{
     background-color: rgb(255, 204, 0);
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: flex;
     
 }
 
 .header-left, .play {
     width: 50%;
-    height: 100%;
+    height: 100vh;
 }
 
-.play{
+.play-img {
+    height: 100%;
     margin: 0px;
     padding: 0px;
     cursor: pointer;
@@ -37,7 +38,7 @@ header{
 
 .header-left{
     width: 50%;
-    height: 100%;
+    height: auto;
     padding: 15px;
     display: flex;
     flex-direction: column;
@@ -76,6 +77,11 @@ h1{
 
 .section-1 {
     width: 100%;
+    height: 237vh;
+    background-color: rgb(101, 13, 151);
+}
+
+.section-1-img {
     height: 100%;
 }
 
@@ -91,16 +97,10 @@ section, footer {
     margin: 0;
 }
 
-.section-1 {
-    width: 100%;
-    height: 237vh;
-    background-color: rgb(101, 13, 151);
-}
-
 .section-2 {
     background-color: rgb(255, 204, 0);
     width: 100%;
-    height: 300vh;
+    height: 454vh;
     display: flex;
     flex-direction: column;
     padding: 15px;
@@ -108,13 +108,13 @@ section, footer {
 
 .section-2 > div {
     width: 100%;
-    border: 1px solid black;
 }
 
 footer {
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-basis: 0;
 }
 
 .bocca {
@@ -164,12 +164,14 @@ footer {
 
 .cerchio {
     margin: 8px;
-    margin-left: 76px;
+    margin-left: 60px;
+    width: 70%;
 }
 
 .curva {
     position: relative;
     bottom: 230px;
+    width: 100%;
 }
 
 .container2-section-2 {
@@ -183,13 +185,13 @@ footer {
     width: 32%;
     position: relative;
     bottom: 300px;
+    right: 20px;
 }
 
 .lista-FM > div {
     width: 100%;
     height: auto;
     border-bottom: 1px solid black;
-    margin-right: 15px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -207,7 +209,7 @@ footer {
 }
 
 .FM-span {
-    font-size: 120px;
+    font-size: 100px;
     margin-left: 20px;
 }
 
@@ -231,7 +233,7 @@ footer {
 }
 
 .online-list > div {
-    width: 100%;
+    width: 90%;
     height: auto;
     border-bottom: 1px solid black;
     margin-left: 15px;
@@ -246,15 +248,343 @@ footer {
     padding: 0px;
 }
 
+.letter-A {
+    padding-right: 18px;
+    height: 111vh;
+}
+
 .online-span {
-    font-size: 120px;
-    margin-left: 20px;
+    font-size: 100px;
+    padding-left: 20px;
 }
 
 .list-span, .arrow {
     cursor: pointer;
 }
 
+.container4-section-2 {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+}
+
+.device-list > div {
+    width: 98%;
+    height: auto;
+    border-bottom: 1px solid black;
+    padding: 0px;
+    margin-left: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.device-span {
+    font-size: 100px;
+    margin-left: 20px;
+}
+
+.testa-device-list p {
+    font-size: 70px;
+    margin: 0px;
+    padding: 0px;
+    padding-left: 50%;
+}
+
+.device-span-p {
+    font-size: 85px;
+    margin:0;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    margin-right: 15px;
+}
+
+
+.device-paragraf {
+    padding-top: 32px;
+    font-size: 29px;
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+
+.doppia-curva {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    padding: 0px;
+    gap: 0px;
+}
+
+.doppia-curva > div {
+    margin-top: 40px;
+    margin-left: 0px;
+    padding: 0px;
+}
+
+.section-3 {
+    width: 100%;
+    height: auto;
+    background-color: rgb(101, 13, 151);
+}
+
+.section-4 {
+    background-color: white;
+    width: 100%;
+    height: auto;
+}
+
+.container1-section-4 {
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 18px;
+}
+
+.grid-container {
+    width: 100%;
+    margin-bottom: 260px;
+    padding: 30px;
+    height: auto;
+    display: grid;
+    gap: 30px;
+    grid-template-columns: (3 / 1fr);
+    grid-template-areas: 
+    ". . Mon"
+    "Tue Wed ."
+    ". Thu ."
+    ". . Fri"
+    "Sat Sun .";
+}
+
+.Mon {
+    grid-area: Mon;
+}
+
+.Tue {
+    grid-area: Tue;
+}
+
+.Wed {
+    grid-area: Wed;
+}
+
+.Thu {
+    grid-area: Thu;
+}
+
+.Fri {
+    grid-area: Fri;
+}
+
+.Sat {
+    grid-area: Sat;
+}
+
+.Sun {
+    grid-area: Sun;
+}
+
+.grid-container-div {
+    width: 100%;
+    height: auto;
+    display: flex;
+    border-bottom: 1px solid lightgray;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 100px 20px 0px;
+}
+
+.day-title {
+    font-size: 110px;
+}
+
+.day-span, .day-span-text {
+    font-size: 24px;
+}
+
+.day-span-text {
+    width: 80%;
+}
+
+.section-5 {
+    margin-top: 30px;
+    width: 100%;
+    height: 600vh;
+}
+
+.div-section-5 {
+    background-color: rgb(255, 204, 0);
+    border-bottom: 1px solid black;
+    height: 38vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.div-section-5-img {
+    background-color: rgb(255, 204, 0);
+    width: 100%;
+    height: 76vh;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+.keyboards {
+    position: relative;
+    top: 48px;
+}
+
+marquee {
+    font-size: 210px;
+}
+
+.section-6 {
+    width: 100%;
+    height: 200vh;
+    display: flex;
+    background-color: rgb(8, 152, 248);
+}
+
+.pecora {
+    width: 50%;
+    height: auto;
+    padding-top: 80px;
+    padding-bottom: 100px;
+    padding-left: 160px;
+}
+
+.sheep {
+    position: sticky;
+    width: 75%;
+    top: 40px;
+}
+
+.lista-jazz-romania {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    bottom: 40px;
+}
+
+.lista-jazz-romania > div {
+    width: 97%;
+    height: auto;
+    border-bottom: 1px solid white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.jazz-title {
+    color: white;
+    font-size: 110px;
+    padding-bottom: 35px;
+    margin-top: 0;
+}
+
+.jazz-span {
+    color: white;
+    font-size: 24px;
+    margin-top: 25px;
+    padding-bottom: 25px;
+}
+
+.jazz-span-2 {
+    color: white;
+}
+
+.section-7 {
+    height: 118vh;
+    background-color: rgb(101, 13, 151);
+}
+
+.section-7-img {
+    height: 100%;
+}
+
+.section-8 {
+    width: 100%;
+    padding-top: 20px;
+    height: auto;
+    background-color: rgb(255, 204, 0);
+    display: flex;
+    justify-content: space-between;
+}
+
+.h1-section-8 {
+    margin: 0px;
+    padding: 0px;
+    padding-left: 15px;
+    font-size: 275px;
+    font-weight: 800;
+    line-height: 250px;
+    position: sticky;
+    top: 20px;
+}
+
+.div-cerchio-8 {
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    padding-left: 550px;
+}
+
+.list-section-8 {
+    width: 50%;
+    height: auto;
+}
+
+.list-8 {
+    width: 96%;
+    margin: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    padding-top: 200px;
+}
+
+.box-list-8 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 1px solid black;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.span-list-8 {
+    font-size: 40px;
+}
+
+.span-list-8-small {
+    font-size: 25px;
+}
+
+.span-list-8-facebook {
+    font-size: 110px;
+}
+
+.arrow-8 {
+    width: 60px;
+}
+
+.eye {
+    width: 80%;
+}
+
+.box-list-8-eye {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top: 1px solid black;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
 
 @keyframes rotazione-freccia {
 
