--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 
 *{
     box-sizing: border-box;
@@ -13,7 +13,7 @@ html,body{
     padding: 0;
     width: 100%;
     height: 100vh;
-    font-family: Almarai, sans-serif;
+    font-family: DM Sans, sans-serif;
 }
 
 header{
